# bevy-input-sequence

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
benches/: keycode.rs
examples/: gamepad_button.rs  keycode.rs  keymod.rs  minimal.rs  multiple_input.rs  only_if.rs  run_if.rs
macro/: Cargo.toml  README.md
macro/examples/: winit.rs
macro/src/: bevy.rs  lib.rs  winit.rs
src/: act.rs  action.rs  cache.rs  chord.rs  cond_system.rs  covec.rs  frame_time.rs  input.rs  input_sequence.rs  key_sequence.rs  lib.rs  plugin.rs  secret.rs  sequence.rs  sequence_reader.rs  time_limit.rs  timeout.rs
src/cache/: button.rs  key.rs  mod.rs
tests/: act.rs  macros.rs  simulated.rs  try_build_tests.rs
tests/compile_fail/: too_many_keys.rs  too_many_keys.stderr  use_uppercase.rs  use_uppercase.stderr
