[package]
name = "bevy-input-sequence"
description = "Recognizes and acts on input sequences"
version = "0.6.0"
edition = "2021"
authors = ["elm", "Shane Celis <shane.celis@gmail.com>"]
keywords = [
    "gamedev",
    "bevy",
    "hotkey",
    "cheat-code",
    "input"
]
categories = [
    "game-engines",
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/elm-register/bevy-input-sequence"

[[example]]
name = "keycode"
path = "examples/keycode.rs"

[[example]]
name = "gamepad_button"
path = "examples/gamepad_button.rs"

[[example]]
name = "multiple_input"
path = "examples/multiple_input.rs"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [] }
trie-rs = { version = "0.4" }
keyseq = { version = "0.5.0", features = [ "bevy" ] }

[patch.crates-io]
keyseq = { path = "../keyseq" }

[dev-dependencies]
bevy = "0.15"
trybuild = "1.0"
version-sync = "0.9"
