[package]
name = "bevy-input-sequence"
description = "Recognizes and acts on input sequences"
version = "0.9.0"
edition = "2021"
authors = ["elm", "Shane Celis <shane.celis@gmail.com>"]
keywords = [
    "gamedev",
    "bevy",
    "hotkey",
    "cheat-code",
    "input"
]
categories = [
    "game-engines",
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/elm-register/bevy-input-sequence"

[[example]]
name = "keycode"
path = "examples/keycode.rs"

[[example]]
name = "gamepad_button"
path = "examples/gamepad_button.rs"

[[example]]
name = "multiple_input"
path = "examples/multiple_input.rs"

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["std", "async_executor", "bevy_log"] }
trie-rs = { version = "0.4" }
keyseq = { version = "0.7.0", features = [ "bevy" ] }

[dev-dependencies]
bevy = "0.17"
trybuild = "1.0"
version-sync = "0.9"

[features]
x11 = ["bevy/x11"]

[package.metadata.docs.rs]
features = ["x11"]

[patch.crates-io]
keyseq = { path = "../keyseq" }
