[package]
name = "keyseq_macro"
description = "Short-hand notation for key chords, e.g., ctrl-A"
version = "0.1.0"
edition = "2021"
authors = ["Shane Celis <shane.celis@gmail.com>"]
keywords = [
    "game",
    "gamedev",
    "bevy",
    "winit",
    "input-sequence",
    "hotkey",
    "cheat-code",
    "key-sequence"
]
categories = [
    "game-engines",
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shanecelis/bevy_keyseq_macro"

[lib]
proc-macro = true

[features]
default = []
winit = []
bevy = []
bevy-input-sequence = []

[dependencies]
proc-macro-error = { version = "1.0.4", default-features = false }
proc-macro2 = "1.0.69"
quote = "1.0"

[dev-dependencies]
winit = { version = "0.29.10", optional = false }
bevy = { version = "0.12.1", default-features = false }
